# sionna-dl-6g

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  docker-instructions.md  host_nvidia_runtime_setup.sh  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test-publish.yml  test.yml
demos/dpd/: inference.py  plots_ls.py  plots_nn.py  training_ls.py  training_nn.py
demos/mimo_ofdm_neural_receiver/: baseline.py  example.py  inference.py  plots.py  training.py
demos/pusch_autoencoder/: baseline.py  inference.py  plots.py  training.py
docker/: docker-instructions.md  entrypoint.sh
docs/: Makefile  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
docs/api/: index.rst  mimo_ofdm_neural_receiver.rst
docs/demos/: dpd.rst  mimo_ofdm_neural_receiver.rst  pusch_autoencoder.rst
dpd/: example.py  inference.py  training_ls.py  training_nn.py
dpd/src/: __init__.py  indirect_learning_dpd.py  interpolator.py  ls_dpd.py  nn_dpd.py  power_amplifier.py  signal.py  system.py  tx.py  tx_config.json  utilities.py
mimo_ofdm_neural_receiver/: baseline.py  example.py  gen_plots.py  inference.py  plots.py  training.py
mimo_ofdm_neural_receiver/src/: channel.py  csi.py  (+6 more)
mimo_ofdm_over_cdl/: baseline_eval.py  gen_plots.py  inference.py  train.py  training.py
pusch_autoencoder/: baseline.py  cir.py  cir_generator.py  config.py  inference.py  plots.py  system.py  training.py  training_rl.py
(+86 files in other folders)
