[tool.poetry]
name = "sionna-dl-6g"
version = "0.1.0"
package-mode = false
description = "DL for 6G Using TensorFlow and Sionna"
authors = ["Srikanth Pagadarai <srikanth.pagadarai@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sionna = ">=0.15.0"
matplotlib = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0"
